# drogue-doppelgaenger

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  justfile  rust-toolchain.toml
.github/scripts/: basic-tests.sh
.github/workflows/: ci.yaml
api/: openapi.yaml
backend/: Cargo.toml
backend/api/: openapi.yaml
backend/src/: api.rs  endpoints.rs  lib.rs  main.rs  utils.rs
backend/src/notifier/: actix.rs  mod.rs
common/: Cargo.toml
common/examples/: gen_schema.rs
common/src/: app.rs  error.rs  lib.rs
common/src/model/: mod.rs
common/src/service/: mod.rs  redis.rs
common/src/stream/: mod.rs
core/: Cargo.toml
core/examples/: gen_schema.rs
core/src/: app.rs  error.rs  events.rs  kafka.rs  lib.rs  mqtt.rs  schemars.rs  serde.rs
core/src/api/: mod.rs
core/src/api/az/: mod.rs  types.rs
core/src/command/: mod.rs  mqtt.rs
core/src/config/: kafka.rs  mod.rs
core/src/injector/: mod.rs  mqtt.rs
core/src/injector/mapper/: metadata.rs  payload.rs
core/src/listener/: mod.rs
core/src/machine/: deno.rs  desired.rs  mod.rs  recon.rs
core/src/machine/js/: core.js
core/src/model/: desired.rs  mod.rs  recon.rs  waker.rs
core/src/notifier/: kafka.rs  mod.rs
core/src/processor/: mod.rs
core/src/processor/sink/: kafka.rs  mod.rs
core/src/processor/source/: kafka.rs  mod.rs
core/src/service/: error.rs  id.rs  mod.rs  updater.rs
core/src/storage/: mod.rs
core/src/storage/postgres/: mod.rs  utils.rs
core/src/waker/: mod.rs  postgres.rs
core/tests/: processor.rs  service.rs  setup.rs  tests.rs  waker.rs
core/tests/base/: hierarchy.rs  mod.rs  processor.rs  service.rs  waker.rs
core/tests/common/: failure.rs  mock.rs  mod.rs
core/tests/failures/: event.rs
database-migration/migrations/00000000000000_init/: down.sql  up.sql
debugger/: nginx.conf  nginx.sh
deploy/: 030-Deployment-input.yaml  030-Deployment-websocket.yaml  050-Service-metrics.yaml  README.md  grafana-dashboard.json  values.yaml
deploy/express/: values.yaml
deploy/install/: Chart.yaml
deploy/profiles/: crc.yaml  gke.yaml  kind-rootless.yaml  kind.yaml  minikube.yaml
devel/: README.md  docker-compose.yml  init-db.js  init-rs.sh  replica.key
develop/: CHEATSHEET.adoc  compose-health.yaml  compose.yaml  dependencies.yaml  docker-compose.yml  services.yaml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: architecture.adoc  concepts.adoc  index.adoc
docs/modules/ROOT/partials/: concepts.adoc
docs/modules/api/attachments/: openapi.yaml
docs/modules/developer-guide/: nav.adoc
docs/modules/developer-guide/attachments/: dotenv  dotenv.sh
docs/modules/developer-guide/pages/: index.adoc  local.adoc  pre-reqs.adoc
docs/modules/user-guide/: nav.adoc
docs/modules/user-guide/pages/: getting_started.adoc  index.adoc
doppelgaenger-input/: .dockerignore  Cargo.toml  Dockerfile
doppelgaenger-input/src/: main.rs  metrics.rs  processor.rs
doppelgaenger-websocket/: Dockerfile  MANIFEST.in  main.py  requirements.txt  setup.py
doppelgaenger-websocket/templates/: index.html  index.js
examples/: 00_oauth.adoc  10_basic.adoc  20_reconcile.adoc  30_notifications.adoc  40_validation.adoc  50_wakeup.adoc  60_synthetics.adoc  70_desired_state.adoc  80_hierarchy.adoc  99_just_testing.adoc
examples/20_reconcile/: recon1.js  recon2.js
examples/30_notifications/: debugger.html  index.html  thing.js
examples/40_validation/: schema.json
examples/50_wakeup/: timer1.js  wakeup1.js
examples/60_synthetics/: syn1.js  syn2.js  syn3.js
frontend/: Cargo.toml
frontend/src/: main.rs
ideas/: brainstorming.adoc
injector/: Cargo.toml
injector/src/: lib.rs  main.rs
model/: Cargo.toml
model/src/: desired.rs  lib.rs  recon.rs  types.rs
processor/: Cargo.toml
processor/src/: lib.rs  main.rs
scripts/: drgadm
scripts/cmd/: __endpoints.sh  deploy.sh  endpoints.sh
scripts/lib/: common.sh  k8s.sh
server/: Cargo.toml
server/src/: db.rs  keycloak.rs  main.rs
server/src/injector/: mapper.rs  mod.rs  mqtt.rs
server/src/injector/mapper/: metadata.rs  mod.rs
waker/: Cargo.toml
waker/src/: lib.rs  main.rs
