[workspace]

members = [
    "backend",
    "core",
    "injector",
    "model",
    "processor",
    "server",
    "waker",
]
exclude = [
    "frontend",
]

[patch.crates-io]
#drogue-bazaar = { path = "../drogue-bazaar" }
drogue-bazaar = { git = "https://github.com/drogue-iot/drogue-bazaar", rev = "64d6b185cb5570b1d3bd31a6a3d53ac0595ba18f" } # FIXME: awaiting release 0.3.0
#drogue-client = { path = "../drogue-client" }
drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "78aaf1b0ab7524f428efec5a9de75a1242701951" } # FIXME: awaiting release 0.11.0

#actix-web = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16"} # FIXME: awaiting release 4.2.0
#actix-http = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16"} # FIXME: awaiting release 4.2.0
