[package]
name = "drogue-doppelgaenger-backend"
description = "Drogue IoT Doppelgänger Backend"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
drogue-bazaar = "0.2"
drogue-client = "0.11.0-alpha.1"
futures = "0.3"
humantime = "2"
humantime-serde = "1"
log = "0.4"
openid = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
time = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-actix-web = { version  = "0.6", features = ["opentelemetry_0_17"] }
url = "2"

drogue-doppelgaenger-core = { path = "../core" }
