[package]
name = "drogue-doppelgaenger-common"
description = "Drogue IoT Doppelgänger Common Code"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
schemars = { version = "0.8", features = ["bytes", "chrono"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.13"
base64-serde = "0.6"
bytes = "1"


opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"], optional = true }

redis = { version = "0.21", features = ["tokio-comp", "tokio-native-tls-comp"] }
deadpool-redis = { version = "0.10", features = ["rt_tokio_1", "serde"] }

[features]
jaeger = ["opentelemetry-jaeger"]

[dev-dependencies]
serde_yaml = "0.8"