[package]
name = "drogue-doppelgaenger-common"
description = "Drogue IoT Common code"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cloudevents-sdk = { version = "0.5", features = ["rdkafka"] }
config = "0.13"
env_logger = "0.9"
futures = "0.3"
humantime-serde = "1"
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
uuid = { version = "1", features = ["v4"] }
owning_ref = "0.4"

rdkafka = { version = "0.28", features = ["sasl", "ssl"], optional = true }

[features]
default = ["rdkafka"]

[dev-dependencies]
url = "2"
