[package]
name = "drogue-doppelgaenger-core"
description = "Drogue IoT Doppelgänger Code"
version = "0.2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix-web = "4"
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
base64-serde = "0.6"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
cloudevents-sdk = "0.5"
config = "0.13"
dotenv = "0.15"
drogue-bazaar = "0.3"
env_logger = "0.9"
futures = "0.3"
humantime = "2"
humantime-serde = "1"
indexmap = "1.9"
json-patch = { version = "0.2", default-features = false }
jsonschema = "0.16"
lazy_static = "1"
log = "0.4"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
postgres-types = "0.2"
prometheus = { version = "0.13" }
rdkafka = { version = "0.29", features = ["sasl", "ssl"] }
rustls = "0.20"
rustls-native-certs = "0.6"
schemars = { version = "0.8", features = ["bytes", "chrono", "indexmap"] }
serde = { version = "1", features = ["rc"] }
serde_json = "1"
thiserror = "1"
time = "0.1"
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"], optional = true }

deadpool-postgres = { version = "0.10", features = ["rt_tokio_1", "serde"] }
postgres-native-tls = { version = "0.5" }
native-tls = "0.2"
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

deno_core = { version = "0.156.0" }

rumqttc = "0.17"

drogue-doppelgaenger-model = { path = "../model" }

[features]
jaeger = ["opentelemetry-jaeger"]
console-metrics = []

[dev-dependencies]
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
