[package]
name = "drogue-doppelgaenger-input"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4"
actix-web-prom = "0.6"
anyhow = "1"
bson = { version = "2" }
chrono = "0.4"
cloudevents-sdk = { version = "0.4.0", features = ["rdkafka"] }
config = "0.12"
dotenv = "0.15"
env_logger = "0.9"
futures-util = "0.3"
indexmap = { version = "1", features = ["serde"] }
lazy_static = "1"
log = "0.4"
mongodb = "2.1.0"
prometheus = { version = "^0.13", default-features = false }
rdkafka = { version = "0.28", features = ["ssl", "sasl"] }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1"

[patch.crates-io]
cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust", branch = "actix-web-4.0.0-beta.19" } # FIXME: pre-release branch
