[package]
name = "drogue-doppelgaenger-injector"
description = "Drogue IoT Doppelgänger Injector"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
drogue-bazaar = "0.2"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

drogue-doppelgaenger-common = { path = "../common" }
drogue-doppelgaenger-core = { path = "../core" }
