[package]
name = "drogue-doppelgaenger-server"
description = "Drogue IoT Doppelgänger all-in-one server"
version = "0.2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
actix-web = "4"
anyhow = "1"
chrono = "0.4"
cloudevents-sdk = "0.5"
dotenv = "0.15"
drogue-bazaar = "0.2"
drogue-client = "0.11.0-alpha.1"
env_logger = "0.9"
futures = "0.3"
humantime-serde = "1"
keycloak = "18"
log = "0.4"
openid = "0.10"
rdkafka = "0.28"
reqwest = "0.11.11"
rustls = "0.20"
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-actix-web = { version  = "0.6", features = ["opentelemetry_0_17"] }
uuid = { version = "1", features = ["v4"] }

drogue-doppelgaenger-core = { path = "../core" }
drogue-doppelgaenger-backend = { path = "../backend" }
drogue-doppelgaenger-processor = { path = "../processor" }

pq-sys = "0.4.6"
rdkafka-sys = "4.0"
sasl2-sys = "0.1.14"

deadpool-postgres = { version = "0.10", features = ["rt_tokio_1", "serde"] }
postgres-native-tls = { version = "0.5" }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
diesel = { version = "1.4", features = ["postgres"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }

[features]
static = ["rdkafka-sys/ssl-vendored", "sasl2-sys/vendored", "sasl2-sys/openssl-sys", "pq-sys/pkg-config"]

